--- a/index.html
+++ b/index.html
@@ -4,14 +4,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Layout</title>
+    <title>Quynh Chi cute-Deadline 2</title>
     <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
     <header class="header">
         <div class="container">
-            <div class="inner-wrap">
+            <div class="inner-wrap-head">
                 <div class="inner-logo box">Logo</div>
                 <div class="inner-menu box">Menu</div>
                 <div class="inner-button box">Button</div>
@@ -19,18 +19,50 @@
         </div>
     </header>
     <section class="section1">
-        <div class="container">Chi2</div>
+        <div class="container">
+            <div class="inner-wrap part1">         
+                <div class="inner-content box">Content</div>
+                <div class="inner-image box">Image</div>
+            </div>
+        </div>
     </section>
     <section class="section2">
-        <div class="container">Chi3</div>
+        <div class="container">
+            <div class="title">Title</div>
+            <div class="inner-wrap part2">
+                <div class="inner-item1 box">Item</div>
+                <div class="inner-item1 box">Item</div>
+                <div class="inner-item1 box">Item</div>
+                <div class="inner-item1 box">Item</div>
+                <div class="inner-item1 box">Item</div>
+                <div class="inner-item1 box">Item</div>
+            </div>
+        </div>
     </section>
     <section class="section3">
-        <div class="container">Chi4</div>
+        <div class="container">
+            <div class="title">Title</div>
+            <div class="inner-wrap part3">
+                <div class="inner-item2 box">Item</div>
+                <div class="inner-item2 box">Item</div>
+                <div class="inner-item2 box">Item</div>
+                <div class="inner-item2 box">Item</div>
+                <div class="inner-item2 box">Item</div>
+            </div>
+        </div>
     </section>
     <section class="section4">
-        <div class="container">Chi5</div>
+        <div class="container">
+            <div class="title">Title</div>
+            <div class="inner-wrap part4">
+                <div class="inner-item3 box">Item</div>
+                <div class="inner-item3 box">Item</div>
+                <div class="inner-item3 box">Item</div>
+                <div class="inner-item3 box">Item</div>
+            </div>
+        </div>
     </section>
-    <footer>Chi6</footer>
+    <footer class="inner-wrap">Footer</footer>
 </body>
 
 </html>
