--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     </header>
     <section class="section1">
         <div class="container">
-            <div class="inner-wrap part1">         
+            <div class="inner-wrap">         
                 <div class="inner-content box">Content</div>
                 <div class="inner-image box">Image</div>
             </div>
@@ -28,21 +28,21 @@
     </section>
     <section class="section2">
         <div class="container">
-            <div class="title">Title</div>
-            <div class="inner-wrap part2">
-                <div class="inner-item1 box">Item</div>
-                <div class="inner-item1 box">Item</div>
-                <div class="inner-item1 box">Item</div>
-                <div class="inner-item1 box">Item</div>
-                <div class="inner-item1 box">Item</div>
-                <div class="inner-item1 box">Item</div>
+            <div class="title box">Title</div>
+            <div class="inner-wrap">
+                <div class="inner-item box">Item</div>
+                <div class="inner-item box">Item</div>
+                <div class="inner-item box">Item</div>
+                <div class="inner-item box">Item</div>
+                <div class="inner-item box">Item</div>
+                <div class="inner-item box">Item</div>
             </div>
         </div>
     </section>
     <section class="section3">
         <div class="container">
-            <div class="title">Title</div>
-            <div class="inner-wrap part3">
+            <div class="title box">Title</div>
+            <div class="inner-wrap">
                 <div class="inner-item2 box">Item</div>
                 <div class="inner-item2 box">Item</div>
                 <div class="inner-item2 box">Item</div>
@@ -53,8 +53,8 @@
     </section>
     <section class="section4">
         <div class="container">
-            <div class="title">Title</div>
-            <div class="inner-wrap part4">
+            <div class="title box">Title</div>
+            <div class="inner-wrap">
                 <div class="inner-item3 box">Item</div>
                 <div class="inner-item3 box">Item</div>
                 <div class="inner-item3 box">Item</div>
@@ -62,7 +62,7 @@
             </div>
         </div>
     </section>
-    <footer class="inner-wrap">Footer</footer>
+    <footer class="footer box">Footer</footer>
 </body>
 
 </html>
