--- a/index.html
+++ b/index.html
@@ -6,30 +6,26 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Quynh Chi cute-Deadline 2</title>
     <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="responsive.css">
 </head>
 
 <body>
     <header class="header">
-        <div class="container">
             <div class="inner-wrap-head">
                 <div class="inner-logo box">Logo</div>
                 <div class="inner-menu box">Menu</div>
                 <div class="inner-button box">Button</div>
             </div>
-        </div>
     </header>
     <section class="section1">
-        <div class="container">
-            <div class="inner-wrap">         
+            <div class="inner-wrap wrap">         
                 <div class="inner-content box">Content</div>
                 <div class="inner-image box">Image</div>
             </div>
-        </div>
     </section>
     <section class="section2">
-        <div class="container">
             <div class="title box">Title</div>
-            <div class="inner-wrap">
+            <div class="inner-wrap wrap">
                 <div class="inner-item box">Item</div>
                 <div class="inner-item box">Item</div>
                 <div class="inner-item box">Item</div>
@@ -37,10 +33,8 @@
                 <div class="inner-item box">Item</div>
                 <div class="inner-item box">Item</div>
             </div>
-        </div>
     </section>
     <section class="section3">
-        <div class="container">
             <div class="title box">Title</div>
             <div class="inner-wrap">
                 <div class="inner-item2 box">Item</div>
@@ -49,10 +43,8 @@
                 <div class="inner-item2 box">Item</div>
                 <div class="inner-item2 box">Item</div>
             </div>
-        </div>
     </section>
     <section class="section4">
-        <div class="container">
             <div class="title box">Title</div>
             <div class="inner-wrap">
                 <div class="inner-item3 box">Item</div>
@@ -60,7 +52,6 @@
                 <div class="inner-item3 box">Item</div>
                 <div class="inner-item3 box">Item</div>
             </div>
-        </div>
     </section>
     <footer class="footer box">Footer</footer>
 </body>
